--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/LinkedInBackground.webp" alt="" /></span>
 								<p>My journey into data science has taught me a lot. I've learned to explore, clean, process, and model data using Python and SQL. I've learned how to implement both supervised and unsupervised machine learning methods to model interesting data. I've also learned personal skills, including how to communicate technical information to non-technical people, and how to be a leader and troubleshoot independently. Check out my <a href="#work">work</a>.</p>
 							
 							</article>
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/892398-large-music-background-image-3840x2160-hd-1080p.jpg" alt="" /></span>
 								<p>This is a statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization!<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
 								<p>Here are some examples of SQL!<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
@@ -63,7 +63,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/MinuetChristmas.jpg" alt="" /></span>
 								<p>Data scientist skilled in machine learning, statistics, problem solving, and programming, living in the Washington D.C. area. I also work as a private tutor and manage my own business, including marketing, teaching, and communicating technical ideas to non-technical audiences.</p>
 							</article>
 
