--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/892398-large-music-background-image-3840x2160-hd-1080p.jpg" alt="" /></span>
+								<span class="image main"><img src="images/coding.jpg" alt="" /></span>
 								<p>This is a statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization!<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
 								<p>Here are some examples of SQL!<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
