--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 								<p>Here are some examples of SQL!<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
 								<p>Here is an application of several machine learning models on popular music!<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
+								<p>A project utilizing clustering techniques like K-means and HDBScan to create a book-recommending algorithm<br><a href="https://colab.research.google.com/drive/1-yzDOpVrcVFZqGRP19JsI08LK32H_uTn">Book-Recommendation Clustering</a></p>
 							</article>
 
 						<!-- About -->
