--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/coding.jpg" alt="" /></span>
-								<p>This is a statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization!<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
-								<p>Here are some examples of SQL!<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
+								<p>This is a statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization.<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
+								<p>Risk Analysis for Cryptocurrency Fraud<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
-								<p>Here is an application of several machine learning models on popular music!<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
+								<p>Here is an application of several machine learning models on popular music.<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
 								<p>A project utilizing clustering techniques like K-means and HDBScan to create a book-recommending algorithm.<br><a href="https://colab.research.google.com/drive/1-yzDOpVrcVFZqGRP19JsI08LK32H_uTn">Book-Recommendation Clustering</a></p>
 								<p>My final project from Thinkful, using data cleaning/engineering, exploration, visualization, unsupervised clustering, supervised learning, and much more, on the most lucrative game in the world, DotA 2.<br><a href="https://colab.research.google.com/drive/1oMswmh0AI396HhOZ1r5s3dX9vPRy91Nh">DotA 2 Clustering, Machine Learning, and Analysis</a></p>
 							</article>
@@ -75,7 +75,7 @@
 								
 								<ul class="icons">
 									
-									<li><a href="https://www.linkedin.com/in/jonathan-miller-38600419b/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ds-jonathan-miller/" class="icon fa-linkedin"><span class="label">fa-linkedin</span></a></li>
 									<li><a href="https://github.com/CaesarsSeizures" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
