--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/LinkedInBackground.webp" alt="" /></span>
-								<p>My journey into data science has taught me a lot. I've learned to explore, clean, process, and model data using Python and SQL. I've learned how to implement both supervised and unsupervised machine learning methods to model interesting data. I've also learned personal skills, including how to communicate technical information to non-technical people, and how to be a leader and troubleshoot independently. Check out my <a href="#work">work</a>.</p>
+								<p>Data Scientist/Big Data Engineer - Turning data chaos into business brilliance // Need a data scientist who can engineer solutions? Let’s make your data work smarter, not harder! Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -54,18 +54,18 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/coding.jpg" alt="" /></span>
-								<p>This is a statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization.<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
-								<p>Risk Analysis for Cryptocurrency Fraud<br><a href="https://drive.google.com/open?id=12Zhi2QBEbgsmerxZBlzUEoGXl4h1-4G1">SQL Colab</a></p>
+								<p>Statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization.<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
+								<p>Risk Analysis for Cryptocurrency Fraud<br><a href="https://docs.google.com/presentation/d/1jLMVPVqlfNZIzb35FrAxDZAtFt0WW-7w/edit?usp=drive_link&ouid=111472599486703639319&rtpof=true&sd=true">Crypto Fraud Analysis</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
-								<p>Here is an application of several machine learning models on popular music.<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
+								<p>Application of several machine learning models on popular music.<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
 								<p>A project utilizing clustering techniques like K-means and HDBScan to create a book-recommending algorithm.<br><a href="https://colab.research.google.com/drive/1-yzDOpVrcVFZqGRP19JsI08LK32H_uTn">Book-Recommendation Clustering</a></p>
-								<p>My final project from Thinkful, using data cleaning/engineering, exploration, visualization, unsupervised clustering, supervised learning, and much more, on the most lucrative game in the world, DotA 2.<br><a href="https://colab.research.google.com/drive/1oMswmh0AI396HhOZ1r5s3dX9vPRy91Nh">DotA 2 Clustering, Machine Learning, and Analysis</a></p>
+								<p>Data cleaning/engineering, exploration, visualization, unsupervised clustering, supervised learning, and more on predicting DotA 2 match outcomes.<br><a href="https://colab.research.google.com/drive/1oMswmh0AI396HhOZ1r5s3dX9vPRy91Nh">DotA 2 Clustering, Machine Learning, and Analysis</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/MinuetChristmas.jpg" alt="" /></span>
+								<span class="image main"><img src="https://drive.google.com/file/d/1RRcqmEUkDteVysn_MzC46_MgXzI5RqLK/view?usp=drive_link" alt="" /></span>
 								<p>Data scientist skilled in machine learning, statistics, problem solving, and programming, living in the Washington D.C. area. I also work as a private tutor and manage my own business, including marketing, teaching, and communicating technical ideas to non-technical audiences.</p>
 							</article>
 
