--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/coding.jpg" alt="" /></span>
 								<p>Risk Analysis for Cryptocurrency Fraud<br><a href="https://docs.google.com/presentation/d/1jLMVPVqlfNZIzb35FrAxDZAtFt0WW-7w/edit?usp=drive_link&ouid=111472599486703639319&rtpof=true&sd=true">Crypto Fraud Analysis</a></p>
-								<p>Fake News on X Detection.<br><a href="https://colab.research.google.com/drive/1C6knGrCbnjVBJXRk0E8GR2OFx6fmRnT5"></a></p>
+								<p>Fake News on X Detection.<br><a href="https://colab.research.google.com/drive/1C6knGrCbnjVBJXRk0E8GR2OFx6fmRnT5">Fake News on X</a></p>
 								<p>Statistical analysis of user scores versus critic scores in popular video games, complete with data cleaning, modeling, and visualization.<br><a href="https://drive.google.com/open?id=1kCcMcXB5Ukw6ubGobrCpCMTEwNc922az">User Scores vs. Critic Scores in Popular Video Games</a></p>
 								<p>Data exploration and analysis of life expectancy.<br><a href="https://colab.research.google.com/drive/1_bMhqSr5-EjZr461YwesJXfyK96I75JW#scrollTo=DXhO7GJ02Kw9">Life Expectancy Exploration and Analysis</a></p>
 								<p>Application of several machine learning models on popular music.<br><a href="https://drive.google.com/open?id=1qJZq1wngo1y-A7kh4yipis45f1L7Vl-c">Machine Learning in Popular Music</a></p>
